--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Sternels.github.io/NeoStudy",
+  "homepage": "http://Sternels.github.io/NeoFlex",
   "name": "template",
   "private": true,
   "version": "0.0.0",
